--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,6 +72,7 @@ $brown: #3a3636;
     box-shadow: none;
     margin: 0;
     align-self: end;
+    font-size: 20px;
 
     @include medium-down {
       background: transparent;
