--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -1,6 +1,6 @@
 
 
-.btn, input, .input-field, .switch-btn, button{
+.btn, input, .input-field, .swap-btn, button{
   width: 260px;
   height: 50px;
   border-radius: 5px;
@@ -9,7 +9,6 @@
   padding: 8px;
   font-weight: 200;
   letter-spacing: 1px;
-  //text-transform: uppercase;
   background-color: white;
   -webkit-box-shadow: 0px 0px 19px -12px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 0px 19px -12px rgba(0, 0, 0, 0.5);
